src/main/java/com/xx/antlr/Data/lexer/Data.g4
grammar Data;

file : group+;

group : INT sequence[$INT.int] ;

sequence[int n]
locals [int i = 1;]
    :   ( {$i <= $n}? INT {$i++;} )*   /*符合条件的情况下，匹配n个整数*/
    ;

INT :   [0-9]+;             /*匹配整数*/
WS  :   [ \t\n\r]+ ->skip;  /*丢弃所有的空白字符*/
